<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white">

        <TextView
            android:id="@+id/headerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:gravity="center"
            android:text="@string/my_details"
            android:textColor="@color/green"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/name"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray53"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTV" />

        <EditText
            android:id="@+id/ageET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/age"
            android:inputType="number"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray53"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameET" />

        <EditText
            android:id="@+id/bioET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_40dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/bio"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray53"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageET" />

        <EditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_marginRight="@dimen/dimen_15dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/dimen_10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray53"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bioET" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberET" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>